fix() Bad align answer

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h3 {
     z-index: 1;
     position: absolute;
     text-align: right;
-    top: 48%;
+    top: 46%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-family: 'Courier New', Courier, monospace;
